--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     </header>
     <main>
         <input type="text" name="text" id="text">
-        <button type="submit" id="submit">Send</button>
+        <button type="submit" id="submit">Add</button>
         <div id="tasks">
-            <ul id="list">
-
-            </ul>
+            <ul id="list"></ul>
         </div>
     </main>
     <script src="main.js"></script>
