--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <h1>To-Do List</h1>
     </header>
     <main>
-        <input type="text" name="text" id="text">
-        <button type="submit" id="submit">Add</button>
+        <div id="form">
+            <input type="text" name="text" id="text" placeholder="Insert your task here...">
+            <button type="submit" id="add">Add</button>
+        </div>
+        <br>
         <div id="tasks">
+            <button type="submit" id="clean">Clean</button>
             <ul id="list"></ul>
         </div>
     </main>
