Clear LocalStorage list

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <div id="form">
             <input type="text" name="text" id="text" placeholder="Insert your task here...">
             <button type="submit" id="add">Add</button>
+            <br><br>
+            <button type="submit" id="clean">Clean List</button>
         </div>
         <br>
         <div id="tasks">
-            <button type="submit" id="clean">Clean</button>
             <ul id="list"></ul>
         </div>
     </main>
